Revision history for Perl extension Archive::Zip

1.20 Tue  5 Jun 2007 - Adam Kennedy
  - Removing dependency on File::Which due to public outburst of flaming
    on cpanra(n)tings by H.Merijn Brand. Try a simple email next time. :(
  - Embedding an entire copy of File::Which inside the tests instead as
    an alternative to compensating for the lack of build_requires.
  - Removing the docs directory.
    It only had out of date files and non-free copyrighted materials.
    The tarball was probably illegal to distribute as a result.
    (reported by Debian devs)

1.19 Internal use, public release skipped

1.18 Wed 25 Oct 2006 - Adam Kennedy
  - Changing to a production version for final release
  - No other changes of any kind

1.17_05 Tue 19 Sep 2006 - Adam Kennedy
  - Seperated the classes from the main file into seperate packages.
  - Merged the Zip.pod into the main Zip.pm file.
  - Applied default Perl::Tidy to all of the source files, to improve
    the readability and maintainability of the files.
  - Added license in Makefile.PL
  - Added some additional entries to the realclean files

1.17_03 Sat 16 Sep 2006 - Adam Kennedy
  - Adding dependency on File::Which to deal with problems on systems
    that lack zip and unzip programs. This really should be a build-time
    dependency only, but ExtUtils::MakeMaker lacks that capability.
  - Builds and tests cleanly on Win32 now.

1.17_02 Sun  7 May 2006 - Adam Kennedy
  - Renamed the test scripts to the more conventional 01_name.t style
  - Upgraded all test scripts from Test.pm to Test::More (removing Test.pm dependency)
  - Various other miscellaneous cleanups of the test scripts
  - Removed MANIFEST and pod.t from repository (will be auto-generated)
  - Some cleaning up of the POD documentation for readability
  - Added SUPPORT section to docs
  - Merged external TODO file into the POD as a more-common TO DO section
  - Added a BUGS section to the docs

1.17_01 Sun 30 Apr 2006 - Adam Kennedy